--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "microtime": "^3.1.1",
     "mongoose": "^6.7.1",
     "nodemon": "^2.0.20",
-    "random-js": "^2.1.0"
+    "random-js": "^2.1.0",
+    "random-number": "^0.0.9",
+    "randomatic": "^3.1.1"
   }
 }
