--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
     "microtime": "^3.1.1",
     "mongoose": "^6.7.1",
     "nodemailer": "^6.8.0",
